[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

radius = 0.6
height = 1.0
_sections_unfolded = [ "Resource" ]

[sub_resource type="SphereShape" id=2]

radius = 0.19

[node name="Player" type="KinematicBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Linear", "Pause", "Transform", "Visibility", "collide_with", "collision" ]
ACCEL = 2
DEACCEL = 4
FLY_SPEED = 100
FLY_ACCEL = 4
GRAVITY = -9.8
MAX_JUMP_TIMEOUT = 0.2
MAX_ATTACK_TIMEOUT = 0.2
MAX_SLOPE_ANGLE = 40
STAIR_RAYCAST_HEIGHT = 0.75
STAIR_RAYCAST_DISTANCE = 0.58
STAIR_JUMP_SPEED = 5
STAIR_JUMP_TIMEOUT = 0.1
footstep_factor = 0.004
view_sensitivity = 0.3

[node name="body" type="CollisionShape" parent="."]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="leg" type="CollisionShape" parent="body"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.41891e-08, 1.2397 )
shape = null
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="yaw" type="Spatial" parent="."]

editor/display_folded = true

[node name="camera" type="Camera" parent="yaw"]

transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.7, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler/tracking = 0
_sections_unfolded = [ "Transform" ]

[node name="actionRay" type="RayCast" parent="yaw/camera"]

enabled = false
cast_to = Vector3( 0, 0, 2 )
collision_layer = 1
type_mask = 15

[node name="ray" type="RayCast" parent="."]

enabled = true
cast_to = Vector3( 0, -1, 0 )
collision_layer = 1
type_mask = 15
_sections_unfolded = [ "Transform" ]

[node name="stepRay" type="RayCast" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0.58 )
enabled = true
cast_to = Vector3( 0, -1, 0 )
collision_layer = 1
type_mask = 15
_sections_unfolded = [ "Transform" ]

[node name="headCheckArea" type="Area" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25657, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="headCheckArea"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0449913, 0 )
shape = SubResource( 2 )
disabled = false


